--- a/composer.json
+++ b/composer.json
@@ -35,13 +35,13 @@
         "doctrine/dbal": "^2.5",
         "beberlei/assert": "^2.7 || ^3.0",
         "patchwork/utf8": "^1.2",
-        "netzmacht/contao-toolkit": "^3.0"
+        "netzmacht/contao-toolkit": "^3.0",
+        "ocramius/package-versions": "^1.3"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
         "bossa/phpspec2-expect": "^3.0",
         "phpcq/all-tasks": "~1.2",
-        "phpspec/phpspec": "~4.0",
         "php-http/guzzle6-adapter": "^1.1"
     },
     "autoload": {
