--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "netzmacht/contao-page-context",
+    "type": "contao-bundle",
     "description": "This library provides tools to bootstrap the contao page contexts for custom routes.",
     "keywords": [
         "contao",
         "page",
         "context"
     ],
-    "type": "contao-bundle",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
@@ -16,33 +16,33 @@
             "role": "Developer"
         }
     ],
-    "support": {
-        "email": "mail@netzmacht.de",
-        "issues": "https://github.com/netzmacht/contao-page-context/issues",
-        "source": "https://github.com/netzmacht/contao-page-context"
-    },
     "require": {
         "php": ">=7.1",
+        "beberlei/assert": "^2.7 || ^3.0",
         "contao/core-bundle": "^4.4.7",
+        "doctrine/dbal": "^2.5",
+        "netzmacht/contao-toolkit": "^3.0",
+        "patchwork/utf8": "^1.2",
         "symfony/config": "^3.3 || ^4.0",
         "symfony/dependency-injection": "^3.3 || ^4.0",
         "symfony/event-dispatcher": "^3.3 || ^4.0",
-        "symfony/http-kernel": "^3.3 || ^4.0",
         "symfony/http-foundation": "^3.3 || ^4.0",
+        "symfony/http-kernel": "^3.3 || ^4.0",
         "symfony/security": "^3.3 || ^4.0",
-        "symfony/translation": "^3.3 || ^4.0",
         "symfony/templating": "^3.3 || ^4.0",
-        "doctrine/dbal": "^2.5",
-        "beberlei/assert": "^2.7 || ^3.0",
-        "patchwork/utf8": "^1.2",
-        "netzmacht/contao-toolkit": "^3.0"
+        "symfony/translation": "^3.3 || ^4.0"
     },
     "require-dev": {
-        "contao/manager-plugin": "^2.0",
         "bossa/phpspec2-expect": "^3.0",
-        "phpcq/all-tasks": "~1.2",
-        "phpspec/phpspec": "~4.0",
-        "php-http/guzzle6-adapter": "^1.1"
+        "contao/manager-plugin": "^2.0",
+        "php-http/guzzle6-adapter": "^1.1",
+        "phpcq/all-tasks": "~1.2"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        },
+        "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin"
     },
     "autoload": {
         "psr-4": {
@@ -54,10 +54,9 @@
             "vendor/phpcq/autoload-validation/hacks/contao-hack.php"
         ]
     },
-    "extra": {
-        "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin",
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
+    "support": {
+        "email": "mail@netzmacht.de",
+        "issues": "https://github.com/netzmacht/contao-page-context/issues",
+        "source": "https://github.com/netzmacht/contao-page-context"
     }
 }
