--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
         },
         "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin"
     },
