--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
-.check-author.yml export-ignore
+.composer-require-checker.json export-ignore
+.phpcq.lock export-ignore
+.phpcq.yaml.dist export-ignore
+phpspec.yml export-ignore
 .gitattributes export-ignore
 .github export-ignore
 .gitignore export-ignore
-.travis.yml export-ignore
 build.default.properties export-ignore
 build.xml export-ignore
 phpunit.xml.dist export-ignore
