--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,15 @@
-# OS
-.DS_Store
-Thumbs.db
-.directory
-
-# IDEs 
-.buildpath
-.project
-.settings/
-.build/
-.external*/
-.idea/
-nbproject/
-
 # composer related
 vendor/
 composer.lock
 
-# build
-build/
-build.properties
-docs/_build
-
 # Translations
 .tx
+
+# phpcq
+.phpcq.yaml
+.phpcq/*
+!.phpcq
+!.phpcq/local
+
+#phpcs
+.phpcs-cache
