--- a/composer.json
+++ b/composer.json
@@ -1,62 +1,67 @@
 {
-    "name": "netzmacht/contao-page-context",
-    "type": "contao-bundle",
-    "description": "This library provides tools to bootstrap the contao page contexts for custom routes.",
-    "keywords": [
-        "contao",
-        "page",
-        "context"
-    ],
-    "license": "LGPL-3.0-or-later",
-    "authors": [
-        {
-            "name": "David Molineus",
-            "email": "mail@netzmacht.de",
-            "homepage": "https://netzmacht.de",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=7.1",
-        "beberlei/assert": "^2.7 || ^3.0",
-        "contao/core-bundle": "^4.4.7",
-        "doctrine/dbal": "^2.5",
-        "netzmacht/contao-toolkit": "^3.0",
-        "patchwork/utf8": "^1.2",
-        "symfony/config": "^3.3 || ^4.0",
-        "symfony/dependency-injection": "^3.3 || ^4.0",
-        "symfony/event-dispatcher": "^3.3 || ^4.0",
-        "symfony/http-foundation": "^3.3 || ^4.0",
-        "symfony/http-kernel": "^3.3 || ^4.0",
-        "symfony/security": "^3.3 || ^4.0",
-        "symfony/templating": "^3.3 || ^4.0",
-        "symfony/translation": "^3.3 || ^4.0"
-    },
-    "require-dev": {
-        "bossa/phpspec2-expect": "^3.0",
-        "contao/manager-plugin": "^2.0",
-        "php-http/guzzle6-adapter": "^1.1",
-        "phpcq/all-tasks": "~1.2"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        },
-        "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin"
-    },
-    "autoload": {
-        "psr-4": {
-            "Netzmacht\\Contao\\PageContext\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "files": [
-            "vendor/phpcq/autoload-validation/hacks/contao-hack.php"
-        ]
-    },
-    "support": {
-        "email": "mail@netzmacht.de",
-        "issues": "https://github.com/netzmacht/contao-page-context/issues",
-        "source": "https://github.com/netzmacht/contao-page-context"
+  "name": "netzmacht/contao-page-context",
+  "description": "This library provides tools to bootstrap the contao page contexts for custom routes.",
+  "license": "LGPL-3.0-or-later",
+  "type": "contao-bundle",
+  "keywords": [
+    "contao",
+    "page",
+    "context"
+  ],
+  "authors": [
+    {
+      "name": "David Molineus",
+      "email": "mail@netzmacht.de",
+      "homepage": "https://netzmacht.de",
+      "role": "Developer"
     }
+  ],
+  "support": {
+    "email": "mail@netzmacht.de",
+    "issues": "https://github.com/netzmacht/contao-page-context/issues",
+    "source": "https://github.com/netzmacht/contao-page-context"
+  },
+  "require": {
+    "php": "^7.1 || ^8.0",
+    "beberlei/assert": "^2.7 || ^3.0",
+    "contao/core-bundle": "^4.9",
+    "doctrine/dbal": "^2.11 || ^3.1",
+    "netzmacht/contao-toolkit": "^3.0",
+    "patchwork/utf8": "^1.2",
+    "psr/log": "^1.0",
+    "symfony/config": "^4.4 || ^5.1",
+    "symfony/dependency-injection": "^4.4 || ^5.1",
+    "symfony/http-foundation": "^4.4 || ^5.1",
+    "symfony/http-kernel": "^4.4 || ^5.1",
+    "symfony/security": "^4.4 || ^5.1",
+    "symfony/templating": "^4.4 || ^5.1",
+    "symfony/translation": "^4.4 || ^5.1"
+  },
+  "require-dev": {
+    "contao/manager-plugin": "^2.0",
+    "doctrine/coding-standard": "^9.0.",
+    "friends-of-phpspec/phpspec-expect": "^4.0",
+    "phpcq/runner-bootstrap": "^1.0@dev",
+    "phpspec/phpspec": "^6.0 || ^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Netzmacht\\Contao\\PageContext\\": "src/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "contao-components/installer": true,
+      "ocramius/package-versions": true,
+      "contao/manager-plugin": true,
+      "composer/package-versions-deprecated": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    },
+    "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin"
+  }
 }
