--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
   },
   "extra": {
     "branch-alias": {
+      "dev-develop": "1.1.x-dev",
       "dev-master": "1.0.x-dev"
     },
     "contao-manager-plugin": "Netzmacht\\Contao\\PageContext\\ContaoManager\\Plugin"
