--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "symfony/http-kernel": "^4.4 || ^5.1",
     "symfony/security": "^4.4 || ^5.1",
     "symfony/templating": "^4.4 || ^5.1",
-    "symfony/translation": "^4.4 || ^5.1"
+    "symfony/translation-contracts": "^1.1 || ^2.0"
   },
   "require-dev": {
     "contao/manager-plugin": "^2.0",
