--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,13 @@
     "php": "^7.1 || ^8.0",
     "beberlei/assert": "^2.7 || ^3.0",
     "contao/core-bundle": "^4.9",
-    "doctrine/dbal": "^2.11 || ^3.1",
     "netzmacht/contao-toolkit": "^3.0",
-    "patchwork/utf8": "^1.2",
     "psr/log": "^1.0",
     "symfony/config": "^4.4 || ^5.1",
     "symfony/dependency-injection": "^4.4 || ^5.1",
     "symfony/http-foundation": "^4.4 || ^5.1",
     "symfony/http-kernel": "^4.4 || ^5.1",
-    "symfony/security": "^4.4 || ^5.1",
-    "symfony/templating": "^4.4 || ^5.1",
+    "symfony/security-core": "^4.4 || ^5.1",
     "symfony/translation-contracts": "^1.1 || ^2.0"
   },
   "require-dev": {
