--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,6 +14,7 @@
 
     <!-- Directories to be checked -->
     <file>src</file>
+    <file>spec</file>
 
     <!-- Include full Doctrine Coding Standard -->
     <rule ref="Doctrine">
@@ -21,9 +22,6 @@
         <exclude name="SlevomatCodingStandard.Classes.SuperfluousAbstractClassNaming.SuperfluousPrefix"/>
         <exclude name="SlevomatCodingStandard.Classes.SuperfluousTraitNaming.SuperfluousSuffix"/>
         <exclude name="Squiz.NamingConventions.ValidVariableName.MemberNotCamelCaps"/>
-        <exclude name="SlevomatCodingStandard.TypeHints.ParameterTypeHint.MissingNativeTypeHint"/>
-        <exclude name="SlevomatCodingStandard.Classes.ModernClassNameReference.ClassNameReferencedViaFunctionCall"/>
-        <exclude name="SlevomatCodingStandard.ControlStructures.RequireNullCoalesceEqualOperator.RequiredNullCoalesceEqualOperator"/>
     </rule>
 
     <rule ref="Generic.Files.LineLength">
@@ -32,29 +30,6 @@
             <property name="absoluteLineLimit" value="120"/>
         </properties>
         <exclude-pattern>src/Resources/contao/languages/*</exclude-pattern>
-    </rule>
-
-    <rule ref="SlevomatCodingStandard.TypeHints.ParameterTypeHint">
-        <properties>
-            <property name="enableObjectTypeHint" value="false" />
-        </properties>
-    </rule>
-
-    <rule ref="SlevomatCodingStandard.TypeHints.PropertyTypeHint">
-        <properties>
-            <property name="enableNativeTypeHint" value="false" />
-            <property name="enableMixedTypeHint" value="false" />
-            <property name="enableUnionTypeHint" value="false" />
-        </properties>
-    </rule>
-
-    <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHint">
-        <properties>
-            <property name="enableNativeTypeHint" value="false" />
-            <property name="enableStaticTypeHint" value="false" />
-            <property name="enableMixedTypeHint" value="false" />
-            <property name="enableUnionTypeHint" value="false" />
-        </properties>
     </rule>
 
     <rule ref="PSR1.Methods.CamelCapsMethodName.NotCamelCaps">
