--- a/.github/workflows/diagnostics.yml
+++ b/.github/workflows/diagnostics.yml
@@ -17,11 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - php: 7.4
-            output: '-o github-action -o default'
-            phpcq_install: 'install'
-          - php: 8.0
-            output: '-o default'
+          - php: 8.1
+            output: '-o github-action default'
+            phpcq_install: 'update'
+          - php: 8.2
+            output: '-o github-action default'
+            phpcq_install: 'update'
+          - php: 8.3
+            output: '-o github-action default'
             phpcq_install: 'update'
 
     steps:
