--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "friends-of-phpspec/phpspec-expect": "^4.0",
     "netzmacht/phpspec-phpcq-plugin": "@dev",
     "phpcq/runner-bootstrap": "^1.0@dev",
-    "phpspec/phpspec": "^7.0"
+    "phpspec/phpspec": "^7.0 || ^8.0"
   },
   "autoload": {
     "psr-4": {
