--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
   "require": {
     "php": "^8.1",
     "beberlei/assert": "^2.7 || ^3.0",
-    "contao/core-bundle": "^4.13 || ^5.2",
+    "contao/core-bundle": "^4.13 || ^5.3",
     "netzmacht/contao-toolkit": "^3.9 || ^4.0",
     "psr/log": "^1.0 || ^2.0 || ^3.0",
-    "symfony/config": "^5.4 || ^6.0",
-    "symfony/dependency-injection": "^5.4 || ^6.0",
-    "symfony/http-foundation": "^5.4 || ^6.0",
-    "symfony/http-kernel": "^5.4 || ^6.0",
-    "symfony/security-core": "^5.4 || ^6.0",
+    "symfony/config": "^5.4 || ^6.0 || ^7.4",
+    "symfony/dependency-injection": "^5.4 || ^6.0 || ^7.4",
+    "symfony/http-foundation": "^5.4 || ^6.0 || ^7.4",
+    "symfony/http-kernel": "^5.4 || ^6.0 || ^7.4",
+    "symfony/security-core": "^5.4 || ^6.0 || ^7.4",
     "symfony/translation-contracts": "^1.1 || ^2.0 || ^3.0"
   },
   "require-dev": {
